// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment Query Loop Comment Query block insertion 1`] = `
"<!-- wp:comments-query-loop -->
<div class=\\"wp-block-comments-query-loop\\"><!-- wp:comment-template /-->

<!-- wp:comments-pagination -->
<!-- wp:comments-pagination-previous /-->

<!-- wp:comments-pagination-numbers /-->

<!-- wp:comments-pagination-next /-->
<!-- /wp:comments-pagination --></div>
<!-- /wp:comments-query-loop -->"
`;

exports[`Comment Query Loop can be created by typing "/comment query loop" 1`] = `
"<!-- wp:comments-query-loop -->
<div class=\\"wp-block-comments-query-loop\\"><!-- wp:comment-template /-->

<!-- wp:comments-pagination -->
<!-- wp:comments-pagination-previous /-->

<!-- wp:comments-pagination-numbers /-->

<!-- wp:comments-pagination-next /-->
<!-- /wp:comments-pagination --></div>
<!-- /wp:comments-query-loop -->

<!-- wp:comments-query-loop -->
<div class=\\"wp-block-comments-query-loop\\"><!-- wp:comment-template /-->

<!-- wp:comments-pagination -->
<!-- wp:comments-pagination-previous /-->

<!-- wp:comments-pagination-numbers /-->

<!-- wp:comments-pagination-next /-->
<!-- /wp:comments-pagination --></div>
<!-- /wp:comments-query-loop -->"
`;
